[package]
authors = ["Your name <your@em.ail>"]
name = "project_name"
edition = "2024"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"


# Change this import as required for your MCU.
hal = { package = "stm32-hal2", version = "2.0.1", features = ["g431", "g4rt", "usb"]}


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false